fix height hero on mobile

--- a/src/assets/scss/common/footer.scss
+++ b/src/assets/scss/common/footer.scss
@@ -138,7 +138,7 @@
         }
       }
       .footer__tg {
-        padding-top: 30px;
+        margin-top: 30px;
         color: $lnk-grey;
         font-size: 13px;
         line-height: 28px;
